--- a/templates/index.html
+++ b/templates/index.html
@@ -13,15 +13,17 @@
 		
 
 		<section>
+			<br>
+			<br>
 			<h1>Chatbot using PyTorch</h1>
 			<p>Click on the chat button to start chatting</p>
-			<p>You can also view chatbot at <a href="http://vishvaraj.me/">My Portfolio!</a></p>
 			<br>
+			<p>You can visit my porfolio here <a href="http://vishvaraj.me/">vishvaraj.me</a></p>
+			
+			<p>You can check this project details at <a href="https://github.com/imvishvaraj/chatbot_pytorch">Github:imvishvaraj/chatbot_pytorch</a></p>
 			<br>
-			<div align="left">
-				<h2>Ref:</h2>
-				<li>https://www.youtube.com/watch?v=C3JKS3a4R5Y </li>
-			</div>
+			
+			
 
 			<button class="chat-btn">
 				<!-- used google material icon for comment -->
@@ -38,8 +40,8 @@
 				<!-- inside chat box area -->
 				<div class="chat-area" id="chatId">
 					<div class="income-msg">
-						<img src="static/img/tom.jpeg" class="avatar" alt="">
-						<span class="msg">Hi, How can i help you?</span>
+						<!-- <img src="static/img/tom.jpeg" class="avatar" alt=""> -->
+						<span class="msg">start typing....</span>
 					</div>
 				</div>
 
